--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "styled-react-modal": "^2.1.0",
     "use-file-picker": "^1.3.0",
     "web-vitals": "^1.1.0"
   },
