--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -10,6 +11,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "styled-react-modal": "^2.1.0",
