--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.15.1",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
